fix: adjust z-index to explicitly hide marquee behind the robot creative

--- a/src/components/AboutSection2.module.css
+++ b/src/components/AboutSection2.module.css
@@ -25,6 +25,7 @@
   padding: 34.7917vw var(--padding-0) var(--padding-0);
   box-sizing: border-box;
   isolation: isolate;
+  z-index: 2;
 }
 .div {
   width: var(--width-328);
